WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197785
Fix a bunch of compiler warnings
https://bugs.webkit.org/show_bug.cgi?id=197785
Summary
Fix a bunch of compiler warnings
Michael Catanzaro
Reported
2019-05-10 10:24:45 PDT
Fix a bunch of compiler warnings
Attachments
Patch
(11.06 KB, patch)
2019-05-10 10:30 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2019-05-10 10:30:12 PDT
Created
attachment 369563
[details]
Patch
WebKit Commit Bot
Comment 2
2019-05-10 11:04:02 PDT
Comment on
attachment 369563
[details]
Patch Clearing flags on attachment: 369563 Committed
r245179
: <
https://trac.webkit.org/changeset/245179
>
WebKit Commit Bot
Comment 3
2019-05-10 11:04:04 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 4
2019-05-10 12:03:28 PDT
Thanks for the fix!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug