Fix a bunch of compiler warnings https://bugs.webkit.org/show_bug.cgi?id=197785

Reviewed by Don Olmstead.

Source/ThirdParty/ANGLE:

Add compiler flags to suppress various warnings triggered by the new version of ANGLE.

* CMakeLists.txt:

Source/WebCore:

* CMakeLists.txt: WebCoreTestSupport should accept extra SYSTEM includes.
* PlatformGTK.cmake: GTK includes should be added to SYSTEM headers to avoid warnings.
* inspector/InspectorCanvas.cpp: Add preprocessor guards to fix unused function warning.
* rendering/RenderLayer.cpp: Fix unused variable warning.
(WebCore::RenderLayer::updateClipRects):

Source/WebKit:

Guard Cocoa-specific format modifier to avoid -Wformat warning.

* NetworkProcess/AdClickAttributionManager.cpp:
(WebKit::AdClickAttributionManager::fireConversionRequest):

Tools:

Add preprocessor guards to avoid -Wunused-function warnings.

* TestWebKitAPI/Tests/WebCore/FloatRect.cpp:
* TestWebKitAPI/Tests/WebCore/IntRect.cpp:
* TestWebKitAPI/Tests/WebCore/TransformationMatrix.cpp:


Canonical link: https://commits.webkit.org/211919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245179 268f45cc-cd09-0410-ab3c-d52691b4dbfc